--- a/package.json
+++ b/package.json
@@ -6,17 +6,21 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm run compile-schemas && tsc -p tsconfig.json",
-    "compile-schemas": "json2ts -i ./src/schemas -o types",
+    "build:watch": "tsc -b --watch",
+    "compile-schemas": "json2ts -i ./src/schemas -o ./src/types",
     "start": "node ./src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "fastify": "^3.7.0"
+    "fastify": "^3.7.0",
+    "fastify-cors": "^4.1.0",
+    "require-all": "^3.0.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.5",
+    "@types/require-all": "^3.0.1",
     "json-schema-to-typescript": "^9.1.1",
     "typescript": "^4.0.5"
   }
