--- a/package.json
+++ b/package.json
@@ -8,18 +8,22 @@
     "build": "npm run compile-schemas && tsc -p tsconfig.json",
     "build:watch": "tsc -b --watch",
     "compile-schemas": "json2ts -i ./src/schemas -o ./src/types",
-    "start": "node ./src/index.js"
+    "start": "node -r dotenv/config ./src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/amqplib": "^0.5.15",
+    "@types/dotenv": "^8.2.0",
+    "amqplib": "^0.6.0",
+    "dotenv": "^8.2.0",
     "fastify": "^3.7.0",
     "fastify-cors": "^4.1.0",
     "require-all": "^3.0.0"
   },
   "devDependencies": {
-    "@types/node": "^14.14.5",
+    "@types/node": "^14.14.6",
     "@types/require-all": "^3.0.1",
     "json-schema-to-typescript": "^9.1.1",
     "typescript": "^4.0.5"
