--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "dotenv": "^8.2.0",
     "fastify": "^3.7.0",
     "fastify-cors": "^4.1.0",
+    "mongodb": "^3.6.2",
     "require-all": "^3.0.0"
   },
   "devDependencies": {
+    "@types/mongodb": "^3.5.32",
     "@types/node": "^14.14.6",
     "@types/require-all": "^3.0.1",
     "json-schema-to-typescript": "^9.1.1",
