--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/amqplib": "^0.5.15",
     "@types/dotenv": "^8.2.0",
     "amqplib": "^0.6.0",
+    "cron": "^1.8.2",
     "dotenv": "^8.2.0",
     "fastify": "^3.7.0",
     "fastify-cors": "^4.1.0",
@@ -24,6 +25,7 @@
     "require-all": "^3.0.0"
   },
   "devDependencies": {
+    "@types/cron": "^1.7.2",
     "@types/mongodb": "^3.5.32",
     "@types/node": "^14.14.6",
     "@types/require-all": "^3.0.1",
