--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "npm run compile-schemas && tsc -p tsconfig.json",
     "build:watch": "tsc -b --watch",
     "compile-schemas": "json2ts -i ./src/schemas -o ./src/types",
-    "start": "node -r dotenv/config ./src/index.js"
+    "start": "npm run build && node -r dotenv/config ./src/index.js"
   },
   "keywords": [],
   "author": "",
