--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register './src/tests/**/*.ts'",
     "build": "npm run compile-schemas && tsc -p tsconfig.json",
     "build:watch": "tsc -b --watch",
     "compile-schemas": "json2ts -i ./src/schemas -o ./src/types",
@@ -26,11 +26,21 @@
     "require-all": "^3.0.0"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.13",
     "@types/cron": "^1.7.2",
+    "@types/mocha": "^8.0.3",
     "@types/mongodb": "^3.5.32",
     "@types/node": "^14.14.6",
     "@types/require-all": "^3.0.1",
+    "@types/sinon": "^9.0.8",
+    "chai": "4.2.0",
+    "chai-as-promised": "7.1.1",
+    "dirty-chai": "2.0.1",
     "json-schema-to-typescript": "^9.1.1",
+    "mocha": "6.2.0",
+    "sinon": "9.0.2",
+    "sinon-chai": "3.3.0",
+    "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
   }
 }
